Added open flags for running jtreg tests (needed for JDK 16).